rp and po swap
